syntax = "proto3";

option go_package = "github.com/rybbba/dist-pinger/grpc";

message GetReputationsRequest {
    string sender = 1;
    bytes signature = 2;
    
    bool needCredibilities = 3;
}

message Probe {
    string id = 1;
    
    int32 reputationGood = 2;
    int32 reputationBad = 3;

    int32 credibilityGood = 4;
    int32 credibilityBad = 5;
}

message GetReputationsResponse {
    string sender = 1;
    bytes signature = 2;

    repeated Probe probes = 3;
}

service Reputation {
    rpc GetReputations(GetReputationsRequest) returns (GetReputationsResponse);
}